Impléementation de la fonction Générer ou mettre à jour l'identifiant Ark